--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-slick",
+  "name": "@condenast/cn-react-slick",
   "version": "0.14.5",
   "description": " React port of slick carousel",
   "main": "./lib",
@@ -9,11 +9,11 @@
     "test": "jest",
     "dev-test": "jest --watch"
   },
-  "author": "Kiran Abburi",
+  "author": "CondeNast",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/akiran/react-slick"
+    "url": "https://github.com/CondeNast/react-slick"
   },
   "keywords": [
     "slick",
@@ -84,7 +84,7 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/akiran/react-slick/issues"
+    "url": "https://github.com/CondeNast/react-slick/issues"
   },
-  "homepage": "https://github.com/akiran/react-slick"
+  "homepage": "https://github.com/CondeNast/react-slick"
 }
