--- a/package.json
+++ b/package.json
@@ -62,14 +62,15 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "create-react-class": "^15.6.2",
     "json2mq": "^0.2.0",
     "object-assign": "^4.1.0",
     "react-responsive-mixin": "^0.4.0",
     "slick-carousel": "^1.6.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.1",
-    "react-dom": "^0.14.0 || ^15.0.1"
+    "react": "^0.14.0 || ^16.2.0",
+    "react-dom": "^0.14.0 || ^16.2.0"
   },
   "jest": {
     "setupFiles": ["test-setup.js"]
